manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cloud-sample 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-sample 
  template:
    metadata:
      labels:
        app: cloud-sample 
    spec:
      containers:
        - name: cloud-sample 
          image: ceappacr.azurecr.io/82107492
          ports:
          - containerPort: 8080
