manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-82107492
spec:
    ports:
    - port: 8080 
    selector:
        app: "82107492"
